Ensure client hints follow the grammar specified in the spec

If the client hint header value is a double with magnitude < 1,
prepend at least one character (0 in this case) before the
period.

Change-Id: Ia7197d5efc3e4eba44f8d5d32ccb3ba474ecf80e
Bug: 838958
Reviewed-on: https://chromium-review.googlesource.com/1038738
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556233}
Former-commit-id: 62efba10f580439cad11b5e828e5b464097ce40d